# mptoolkit

./: .gitignore  AGENTS.md  CITATIONS  CMakeLists.txt  Changelog  Makefile.in  README  README.md  TODO  aclocal.m4  aclocal.m4.sha  config.h.in  configure  configure.ac  configure.ac.sha  configure.timestamp  depend.sh  fix-timestamp.sh  generate-testreport.sh  regen-aclocal.sh  stamp-h.in  test.txt
.codex/: README.md  instructions.md
async/: async.h  async_matrix.h
attic/: atomic.h  atomic_alpha.h  atomic_pthread.h  backtrace.cpp  backtrace.h  bindpair.h  ctassert.h  datablock_generic.h  diagonalmatrix-old.h  doindent.h  hash.cpp  hash.h  hash_map.cc  hash_map.h  hash_set.cc  hash_set.h  hash_util.h  matrixproduct-removed.h  matrixproductold.h  matrixsortorder.h  metautility.h  mp-itebd-old.cpp  mp-itebd2.cpp  mutex_mt.h  mutex_st.h  spectrum_arpack.cpp  spectrum_arpack.h  stackallocator.cpp  stackallocator.h  su2-old.h  threads.cc  threads.cpp  threads.h  threadspecific.h  threadspecific_mt.cc  threadspecific_mt.h  threadspecific_st.h  tinyvector.cpp  tinyvector.h  triangular-parser.cpp  (+4 more)
backend/: mps.h
benchmark/: bench-rotate.cpp  bench-tripleprod.cpp
blas/: arena.h  blas-functions.txt  diagonalmatrix.h  diagonalmatrix.icc  exponential.cpp  exponential.h  exponential.icc  functors.h  lapack-functions.txt  matrix-blas-base.h  matrix-blas-generic.h  matrix-blas-generic.icc  matrix-blas.h  matrix-blasreference.h  matrix-blasreference.icc  matrix-eigen.cpp  matrix-eigen.h  matrix-eigen.icc  matrix-lapack.cpp  matrix-lapack.h  matrix-lowlevel-base.h  matrix-lowlevel-blas.h  matrix-lowlevel-reference.h  matrix-lowlevel-reference.icc  matrix.h  matrix.icc  matrix_utility.h  matrix_utility.icc  matrix_view.h  matrixref.h  matrixref.icc  number_traits.h  number_traits.icc  pstreamio.h  range.h  safe-conversions.h  slice.h  sparsematrix.h  stride_ptr.h  tensor-functions.txt  (+9 more)
blockoperator/: blockoperator.cc  blockoperator.cpp  blockoperator.h
cmake/: MPTKBlasVendor.cmake  MPTKNumericalBackend.cmake  config.h.in
common/: angle_map.h  arpackf.cpp  arpackf.h  atomic.h  atomic_alpha.h  atomic_pthread.h  atomicrefcount.h  backtrace.cpp  backtrace.h  bindpair.h  blas1f.h  blas2f.h  blas3f.h  blas_vendor.cpp  blas_vendor.h  conflist.cpp  conflist.h  construct_array.h  convertstring.cc  convertstring.h  convertstring_fast.cc  ctassert.h  debug.h  environment.h  formatting.h  fortran.h  gmpint.h  gmprational.h  halfint.cc  halfint.cpp  halfint.h  hash.cpp  hash.h  hash_map.cc  hash_map.h  hash_set.cc  hash_set.h  hash_util.h  inttype.h  json_emit.h  (+62 more)
conf/: dmrg-example.conf  dmrg.conf  gmres.conf
cuda/: cub.cu  cub.h  cublas.cpp  cublas.h  cublas.icc  cuda-setup.cpp  cuda-setup.h  cuda.cpp  cuda.h  cuda.icc  cuda.ipp  cusolver.cpp  cusolver.h  cusolver.icc  gpu_buffer.cpp  gpu_buffer.h  gpu_buffer.icc  gpu_matrix.h  gpu_vector.h
expokit/: expokitf.h  zgpadm.f
interface/: attributes.cc  attributes.cpp  attributes.h  history.cpp  history.h  inittemp.cpp  inittemp.h  operator-expression.cpp
junk/: dmrgloop.h  info.cpp  itime.cpp  itime4.cpp  kondo-exactdiag.cpp  lanczos.cpp  su2hubbard-old.cpp  testmatelem.cpp
lattice/: finitelattice-old.h  finitelattice.cc  finitelattice.cpp  finitelattice.h  finitelattice_mpo.h  function.cpp  function.h  ibc_lattice.h  infinite-parser.cpp  infinite-parser.h  infinitelattice-parser.cpp  infinitelattice-parser.h  infinitelattice.cpp  infinitelattice.h  lattice.h  lattice_operator.h  latticesite.cpp  latticesite.h  multicell-parser.cpp  operator-parser.cpp  operator-parser.h  operator_descriptions.h  product-parser.cpp  product-parser.h  sitebasis.h  siteoperator-parser.cpp  siteoperator-parser.h  siteoperator.cc  siteoperator.cpp  siteoperator.h  triangular-parser.cpp  unitcell-parser.cpp  unitcell-parser.h  unitcell.cc  unitcell.cpp  unitcell.h  unitcell_mpo.cpp  unitcell_mpo.h  unitcelloperator.cc  unitcelloperator.h  (+1 more)
linearalgebra/: arpack_wrapper.cc  arpack_wrapper.cpp  arpack_wrapper.h  associate.h  builtin.h  coefficient_multiply.h  coefficient_multiply_cull.h  coefficient_operations.h  coefficient_parallel_prod.h  coefficient_trace.h  complex.h  complexsparsematrix.h  complexvector.h  compressedmatrix.h  crtp_matrix.h  crtp_vector.h  datablock.h  datablock_generic.h  datablock_old.h  datablockreference.h  dataops.h  dataops_blas.h  dataops_matrix.h  dataops_product.h  deductiontest.cpp  diagonalmatrix.h  doit  eigen.cc  eigen.cpp  eigen.h  experimental.h  exponential.cc  exponential.cpp  exponential.h  fixedvector.h  genericmatrix.h  gmpalgebra.h  hashvector.cc  hashvector.h  identitymatrix.h  (+98 more)
linearalgebra-old/: arpack_wrapper.cc  arpack_wrapper.h  associate.h  builtin.h  complex.h  complexsparsematrix.h  crtp_matrix.h  crtp_vector.h  datablock.h  datablock_old.h  dataops_blas.h  dataops_matrix.h  dataops_product.h  diagonalmatrix.h  exponential.cc  exponential.cpp  exponential.h  gmpalgebra.h  hashvector.cc  hashvector.h  identitymatrix.h  index.h  itermatrixoperations.h  iteroperations.h  iteroperations2.h  mapvector.cc  mapvector.h  matrix_utility.h  matrixaddition.h  matrixfwd.h  matrixinterface.h  matrixiterators.h  matrixmemproxy.h  matrixproductblas-old.h  matrixproductdiagonal.h  matrixproductoperations.h  matrixptriterator.h  matrixtransform.h  matrixtransformiterator.h  matrixvectorviewmem.h  (+21 more)
m4/: ax_blas.m4  ax_blas_vendor.m4  ax_boost_program_options.m4  ax_cublas.m4  ax_cuda.m4  ax_cuda_config.m4  ax_cusolver.m4  ax_mpi.m4  macros.m4  update-macros.sh
matrixproduct-obsolete/: block.cc  block.h  centerwavefunction.cpp  centerwavefunction.h  density.cc  density.cpp  density.h  handlestack.h  infiniteoperator.h  infinitewavefunction.cpp  infinitewavefunction.h  lattice.cc  lattice.cpp  lattice.h  leftrightstack.h  linearoperator.cpp  linearoperator.h  linearwavefunction.cpp  linearwavefunction.h  matrixproduct-sum.h  matrixproductoperations.cpp  matrixproductoperations.h  mpexponential.cpp  mpexponential.h  mpopcomponent.cc  mpopcomponent.cpp  mpopcomponent.h  mpopcompressed.cpp  mpopcompressed.h  mpoperator.h  mpstate.cc  (+21 more)
(+1487 files in other folders)
